# SimpleKTX

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  app.c  ktxView.c  ktxView.h  main.c
assets/: plane_fs.glsl  plane_tex.ktx  plane_vs.glsl
